crates/ty/tests/cli/snapshots/cli__api_lockfile__honors_dunder_all.snap
---
source: crates/ty/tests/cli/api_lockfile.rs
info:
  program: by
  args:
    - generate-api-file
    - "--stdout"
---
success: true
exit_code: 0
----- stdout -----
#api-lock:v=1
#tool:by=0.0.8
#python:default
#modules:1
al._underscore_public:d()->None
al.public_a:d()->None

----- stderr -----
