crates/ty/tests/cli/snapshots/cli__api_lockfile__renders_instance_attributes.snap
---
source: crates/ty/tests/cli/api_lockfile.rs
info:
  program: by
  args:
    - generate-api-file
    - "--stdout"
---
success: true
exit_code: 0
----- stdout -----
#api-lock:v=1
#tool:by=0.0.5
#python:default
#modules:1
ia.C.__init__:d(self:ia.C,x:builtins.int)->None
ia.C.x:i=builtins.int
ia.C.y:i=Literal["hi"]
ia.C:c[]

----- stderr -----
